fix css and text wrap

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1607,6 +1607,7 @@ body {
 }
 @media (max-width: 600px) {
   .cid-rpI772E6DW .img-caption p {
+    white-space: normal !important;
     font-size: 25px !important;
   }
 }
